samples/invalid/04-inline-comment.mmd
%% Diagram: Inline comment

direction LR

a["A"] %% inline comment not allowed
a --> b
b["B"]
